<resources>
    <string name="app_name">ToDo App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

    <string name="registration_success_title">You\'re all set!</string>
    <string name="registration_success_subtitle">It\'s time to sweat! We look forward to seeing you soon!</string>

    <string name="welcome_username">Welcome, %s !</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="msg">Your username is: %s</string>
    <string name="password_error">Password must have at least 6 characters</string>
    <string name="email_error">Invalid email</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="register_button">Sign up</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="username_error">Username needs to be at least 6 characters</string>
    <string name="repeat_password_error">Passwords do not match</string>
    <string name="log_in_button">Log in</string>
    <string name="all_jokes_title">All jokes</string>
    <string name="favorite_jokes_title">Favorite jokes</string>
    <string name="my_profile_title">My profile</string>
    <string name="log_out_button">Log out</string>
    <string name="number_of_jokes_text">Number of favorite jokes: %d</string>
    <string name="email_text">User email: %s</string>
    <string name="username_text">Username: %s</string>
    <string name="welcome_description">In order to join other Jokers, you first need to sign up :]</string>
    <string name="no_items_text">There seems to be no items :[</string>
    <string name="error_title">Oops</string>
    <string name="error_message">Something went wrong! Please try again.</string>
    <string name="general_positive_button">OK</string>
    <string name="joke_hint">Enter your joke</string>
    <string name="add_joke_text">Add joke</string>
    <string name="joke_error">Each joke must have at least 10 characters</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>